src/app/product-dialog/product-dialog.component.scss
.mat-container {
    display: flex;
    flex-direction: column;
}
  

.mat-container > * {
    width: 100%;
   
}


.mat-dialog-title{
    background-color: rgb(51, 74, 97);
    color:#fff;
    height: 60px;
    font-size: 18px;
    text-align: left ;
    padding-top: 15px;
    padding-left: 10px;
}


.mat-dialog-content{
    margin: 0;
}


.mat-dialog-container {
    padding: 0px !important;
}


.close-btn{
   float : right;
   background-color: rgb(51, 74, 97);
   color: #fff
}



.close{
   float:right;
   color:  #fff;
   font-size: 15px;
   padding-top: 5px;
   background-color: transparent;
   border: 0;
   margin-right: 15px;
   margin-top: 10px;
}


.submit-btn{
   float : right;
   margin-left: 10px;
   margin-right: 20px;
   background-color: rgb(51, 74, 97);
   color: #fff;
}

  
.submit-btn:hover{
   background-color:rgb(51, 74, 97);
   border-color:rgb(51, 74, 97);
}


.close-btn:hover {
   background-color:rgb(51, 74, 97);
   border-color:rgb(51, 74, 97);
}


.mat-dialog-actions{
   display: inline-block; 
   margin-top: 40px;
   margin-right: 15px;
}



.btn-primary {
   color: #fff;
   background-color:rgb(51, 74, 97);
   border-color:rgb(51, 74, 97);
}



.color-btns  {
   display: inline-block;
   margin-bottom: 10px;
}


.color-btns input {
   visibility:hidden;
}


.color-btns label {
  padding-left: 4px;
  padding-right: 15px;
  padding-bottom: 5px;
  padding-top: 5px;
  cursor: pointer;
  color: #fff;
  
}



.color1{
  background-color: #34495e; 
}


.color2{
  background-color: #1abc9c; 
}


.color3{
  background-color: #2ecc71; 
}


.color4{
  background-color: #3498db; 
}


.color5{
  background-color: #9b59b6;
}


.color6{
  background-color: #e67e22;
}


.color7{
  background-color: #e74c3c;
}

